--- a/docs/230905/pytamaro.ipynb
+++ b/docs/230905/pytamaro.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/230905/pytamaro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,25 +27,25 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "2VFCY_bfNnDr"
+      },
       "source": [
         "## Installation von PyTamaro in Google Colab\n",
         "\n",
         "Damit PyTamaro in Google Colab verwendet werden kann, muss zuerst die folgende Zelle ausgeführt werden."
-      ],
-      "metadata": {
-        "id": "2VFCY_bfNnDr"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "! pip install pytamaro"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "kjScMhpWN3Wx"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "! pip install pytamaro"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -270,15 +270,19 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "[Hier geht es zurück zur Übersicht](https://i-gw-23-27.github.io/Skript/)"
-      ],
       "metadata": {
         "id": "VHMstHAKN7oG"
-      }
+      },
+      "source": [
+        "[Hier geht es zurück zur Übersicht](https://i-gw-23-27.github.io/Skript/)"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": ".venv",
       "language": "python",
@@ -294,13 +298,9 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.11.5"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
