Füge diverse Links ein

--- a/docs/230919/Bahnhofsuhr.ipynb
+++ b/docs/230919/Bahnhofsuhr.ipynb
@@ -284,6 +284,13 @@
     "zeige_grafik(show_time(NENNDURCHMESSER, 11, 25, 0))\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Zurück zur Übersicht](https://i-gw-23-27.github.io/Skript/)"
+   ]
   }
  ],
  "metadata": {
