Füge Beispiel mit Variable ein

--- a/docs/230905/pytamaro.ipynb
+++ b/docs/230905/pytamaro.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/I-gW-23-27/Skript/blob/main/docs/230905/pytamaro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -104,6 +104,12 @@
         "[Rechtecken](https://pytamaro.readthedocs.io/en/stable/German/primitives.html#pytamaro.de.primitives.rechteck)\n",
         "und\n",
         "[Kreissektoren](https://pytamaro.readthedocs.io/en/stable/German/primitives.html#pytamaro.de.primitives.kreis_sektor).\n",
+        "Wenn Sie ein Rechteck zeichnen und dieses weiterverwenden wollen, müssen Sie es einer Variablen zuweisen. Das geht mit folgendem Code:\n",
+        "\n",
+        "```Python\n",
+        "kleines_rechteck = rechteck(2, 5, rot)\n",
+        "```\n",
+        "\n",
         "Mit dem Befehl\n",
         "[`zeige_grafik()`](https://pytamaro.readthedocs.io/en/stable/German/io.html#pytamaro.de.io.zeige_grafik)\n",
         "kann eine Grafik angezigt werden.\n",
@@ -280,8 +286,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": ".venv",
