--- a/docs/230905/pytamaro.ipynb
+++ b/docs/230905/pytamaro.ipynb
@@ -308,11 +308,11 @@
       "execution_count": 4,
       "metadata": {
         "id": "q8vh7ImlNjDH",
-        "outputId": "7aa942bd-aee9-493e-9232-9e6fe20afea6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 117
-        }
+        },
+        "outputId": "7aa942bd-aee9-493e-9232-9e6fe20afea6"
       },
       "outputs": [
         {
@@ -351,14 +351,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "pwJ-46kfNjDI",
-        "outputId": "38204719-ddb0-4d83-b188-881c5aabc9de",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 517
-        }
+        },
+        "outputId": "5f26ec9b-98f9-40c7-e645-0c33cb40c120"
       },
       "outputs": [
         {
@@ -383,10 +383,11 @@
         "    vertical_bar = drehe(90, bar)\n",
         "    cross = ueberlagere(bar, vertical_bar)\n",
         "    flag = ueberlagere(cross, background)\n",
-        "    zeige_grafik(flag)\n",
+        "\n",
         "    return flag\n",
         "\n",
-        "schweizer_fahne = swiss_flag(500)"
+        "schweizer_fahne = swiss_flag(500)\n",
+        "zeige_grafik(schweizer_fahne)"
       ]
     },
     {
