Füge Beispiel für for-loop ein

--- a/docs/230912/Strassenplatten.ipynb
+++ b/docs/230912/Strassenplatten.ipynb
@@ -195,6 +195,61 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Wiederholungen in Python\n",
+        "\n",
+        "Quadratzahlen von 20 bis 40 als Beispiel."
+      ],
+      "metadata": {
+        "id": "eYtbRF79kR2t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in range(20,41):\n",
+        "  print(x ** 2)"
+      ],
+      "metadata": {
+        "id": "w694n4BGkX7P",
+        "outputId": "2efccb70-d31b-434e-f81a-57a466d3799c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "400\n",
+            "441\n",
+            "484\n",
+            "529\n",
+            "576\n",
+            "625\n",
+            "676\n",
+            "729\n",
+            "784\n",
+            "841\n",
+            "900\n",
+            "961\n",
+            "1024\n",
+            "1089\n",
+            "1156\n",
+            "1225\n",
+            "1296\n",
+            "1369\n",
+            "1444\n",
+            "1521\n",
+            "1600\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
