Füge Link und or ein

--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -57,3 +57,16 @@ Die Wahrheitstabelle dafür sieht folgendermassen aus:
 | 0 | 1 | 0 |
 | 1 | 0 | 0 |
 | 1 | 1 | 1 | 
+
+## Logisches Oder (*or)
+
+Das logische Oder (*or*) wird mit dem Symbol $\or$ dargestellt.
+
+Die Wahrheitstabelle für das logische Oder sieht folgendermassen aus:
+
+| $x$ | $y$ | $x \lor y$ |
+| :---: | :---: | :---: |
+| 0 | 0 | 0 |
+| 0 | 1 | 1 |
+| 1 | 0 | 1 |
+| 1 | 1 | 1 | 
