--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -70,3 +70,18 @@ Die Wahrheitstabelle für das logische Oder sieht folgendermassen aus:
 | 0 | 1 | 1 |
 | 1 | 0 | 1 |
 | 1 | 1 | 1 | 
+
+## Logisches exklusiv-Oder (*xor*)
+
+Das logische exklusiv-Oder (*xor*) wird mit dem Symbol $\dot\lor$
+dargestellt.
+
+Die Wahrheitstabelle für das logische exklusiv-Oder sieht
+folgendermassen aus:
+
+| $x$ | $y$ | $x \ldot\lor y$ |
+| :---: | :---: | :---: |
+| 0 | 0 | 0 |
+| 0 | 1 | 1 |
+| 1 | 0 | 1 |
+| 1 | 1 | 0 | 
