Korrigiere Tippfehler \ldot zu \dot

--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -79,7 +79,7 @@ dargestellt.
 Die Wahrheitstabelle für das logische exklusiv-Oder sieht
 folgendermassen aus:
 
-| $x$ | $y$ | $x \ldot\lor y$ |
+| $x$ | $y$ | $x \dot\lor y$ |
 | :---: | :---: | :---: |
 | 0 | 0 | 0 |
 | 0 | 1 | 1 |
