--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -58,9 +58,9 @@ Die Wahrheitstabelle dafür sieht folgendermassen aus:
 | 1 | 0 | 0 |
 | 1 | 1 | 1 | 
 
-## Logisches Oder (*or)
+## Logisches Oder (*or*)
 
-Das logische Oder (*or*) wird mit dem Symbol $\or$ dargestellt.
+Das logische Oder (*or*) wird mit dem Symbol $\lor$ dargestellt.
 
 Die Wahrheitstabelle für das logische Oder sieht folgendermassen aus:
 
