Erläutere Bindung logischer Operatoren

--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -85,3 +85,9 @@ folgendermassen aus:
 | 0 | 1 | 1 |
 | 1 | 0 | 1 |
 | 1 | 1 | 0 | 
+
+## Rangfolge logischer Operatoren
+
+Analog zu den arithmetischen Operationen haben auch die logischen
+Operatoren eine Rangfolge. Am stärksten bindet dabei *not* ($\lnot$ oder
+$\bar$) gefolgt von *and* ($\land$) und *or* ($\lor$).
