--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -90,4 +90,4 @@ folgendermassen aus:
 
 Analog zu den arithmetischen Operationen haben auch die logischen
 Operatoren eine Rangfolge. Am stärksten bindet dabei *not* ($\lnot$ oder
-$\bar$) gefolgt von *and* ($\land$) und *or* ($\lor$).
+$\bar{ }$) gefolgt von *and* ($\land$) und *or* ($\lor$).
