--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -89,5 +89,5 @@ folgendermassen aus:
 ## Rangfolge logischer Operatoren
 
 Analog zu den arithmetischen Operationen haben auch die logischen
-Operatoren eine Rangfolge. Am stärksten bindet dabei *not* ($\lnot$ oder
-$\bar{ }$) gefolgt von *and* ($\land$) und *or* ($\lor$).
+Operatoren eine Rangfolge. Am stärksten bindet dabei *not* ($\lnot x$ oder
+$\bar{x}$) gefolgt von *and* ($x \land y$) und *or* ($x \lor y$).
