Füge Übersicht ASCII Tabelle ein

--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -1,8 +1,9 @@
 # Aussagenlogik
 
 Computer verarbeiten Daten. Daten werden im Computer als Nullen und
-Einsen oder als "Strom" und "kein Strom" dargestellt. Mit diesen zwei
-Zuständen lässt sich alles darstellen. Weil alles mit zwei Zuständen
+Einsen oder als "Strom" und "kein Strom" dargestellt.
+[Mit diesen zwei Zuständen lässt sich alles darstellen.](ascii.md)
+Weil alles mit zwei Zuständen
 dargestellt werden kann ist diese Form der Darstellung *digital*.
 
 Im folgenden sollen die logischen Operationen
