Link zur Erklärung des Wortes digital eingefügt

--- a/docs/231107/231107_logik.md
+++ b/docs/231107/231107_logik.md
@@ -4,7 +4,8 @@ Computer verarbeiten Daten. Daten werden im Computer als Nullen und
 Einsen oder als "Strom" und "kein Strom" dargestellt.
 [Mit diesen zwei Zuständen lässt sich alles darstellen.](ascii.md)
 Weil alles mit zwei Zuständen
-dargestellt werden kann ist diese Form der Darstellung *digital*.
+dargestellt werden kann ist diese Form der Darstellung
+[*digital*](https://www.wissen.de/wortherkunft/digital).
 
 Im folgenden sollen die logischen Operationen
 
