Ergänze Musterlösung um Hinweis auf Python Tutor

--- a/docs/231114/musterloesung.ipynb
+++ b/docs/231114/musterloesung.ipynb
@@ -193,6 +193,17 @@
     "binaer = '101010'\n",
     "print(f'Die Binärzahl 101010 als Dezimalzahl ist {bin2dez(binaer)}.')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualisierung des Programmablaufs\n",
+    "\n",
+    "Um nachvollziehen zu können, was ein Programm macht, kann dessen Ablauf\n",
+    "[hier](https://pythontutor.com/render.html#mode=edit)\n",
+    "Schritt für Schritt visualisiert nachvollzogen werden."
+   ]
   }
  ],
  "metadata": {
