Bereite Aufgabenstellung vor

--- a/docs/231128/input.ipynb
+++ b/docs/231128/input.ipynb
@@ -156,20 +156,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Auftrag umsetzen\n",
-    "\n",
-    "direction = input('Wenn Sie von einer Dezimal- nach einer Binärzahl \\nkonvertieren wollen, geben Sie ein \"b\" ein. Für \\ndie umgekehrte Richtung ein \"d\".')\n",
-    "\n",
-    "if direction == \"b\":\n",
-    "    number = int(input(\"Geben Sie die in eine Binärzahl umzurechnende Dezimalzahl ein: \"))\n",
-    "    resultat = bin(number)\n",
-    "elif direction == \"d\":\n",
-    "    number = input(\"Geben Sie die in eine Dezimalzahl umzurechnende Binärzahl ein: \")\n",
-    "    resultat = int(number, 2)\n",
-    "else:\n",
-    "    print(\"Ihre Auswahl ist ungültig.\")\n",
-    "    \n",
-    "print(f'Die gewünschte Zahl lautet {resultat}.')"
+    "# TODO: Auftrag umsetzen"
    ]
   }
  ],
